@@ -1,3 +1,6 @@
+2010-10-27 Harri Pitkänen <hatapitk@iki.fi>
+	* GC: Allow AutoCorrect rules with more than two match words.
+
 2010-10-26 Harri Pitkänen <hatapitk@iki.fi>
 	* Increase maximum spelling suggestion search cost by 28 % to match
 	  recent optimizations and CPU speed improvements.
